FIND_PROGRAM(BZIP2_EXECUTABLE bzip2)

IF(NOT BZIP2_EXECUTABLE)
	MESSAGE(FATAL_ERROR "bzip2 is required by the installation process.")
ENDIF()

SET(RCDCAP_MAN_ORIG "${CMAKE_CURRENT_SOURCE_DIR}/rcdcap.1")
SET(RCDCAP_MAN ${CMAKE_CURRENT_BINARY_DIR}/rcdcap.1.bz2)

EXECUTE_PROCESS(COMMAND "${BZIP2_EXECUTABLE}" "-"
		INPUT_FILE ${RCDCAP_MAN_ORIG}
		OUTPUT_FILE ${RCDCAP_MAN})

INSTALL(FILES ${RCDCAP_MAN} DESTINATION share/man/man1/)
